src/objects/MCI_Event__e.object
<CustomObject>
    <description>Async platform event used in MCI calls to trigger other processes</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>contact Id</description>
        <label>Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <description>dsi id for soql query look up</description>
        <label>DSI</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Subscription EndDate</description>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_Owner__c</fullName>
        <label>Environment Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>MCI Type from DSI</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MCI Event</label>
    <pluralLabel>MCI Event</pluralLabel>
</CustomObject>